# kv

./: CLAUDE.md  Cargo.toml
src/: db.rs  detection.rs  error.rs  lib.rs  main.rs  scope.rs
src/commands/: delete.rs  gc.rs  get.rs  list.rs  mod.rs  set.rs  stats.rs
