[package]
name = "douglance-kv"
version = "0.1.0"
edition = "2021"
authors = ["douglance"]
description = "A universal key-value store for agentic tools"
license = "MIT"
repository = "https://github.com/douglance/kv"
keywords = ["cli", "key-value", "storage", "tools"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "kv"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
